# tfs

./: Cargo.toml
front/tfs-front/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
front/tfs-front/src/: index.html  styles.css
front/tfs-front/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
lib/mainline/: .gitignore  Cargo.toml
lib/mainline/examples/: get_peers.rs  put_immutable.rs  put_mutable.rs
lib/mainline/src/: rpc.rs  server.rs
lib/mainline/src/common/: node.rs
src/: main.rs
src/common/: buffered_consumer.rs  common.rs  default_error.rs  mod.rs  state_update.rs
src/common/retry_police/: linear_backoff_with_jitter.rs  mod.rs
src/config/: global_config.rs
src/controllers/: mod.rs
src/controllers/virtual_fs_controller/: error.rs  mod.rs  model.rs  virtual_fs_controller.rs
src/distributed_map/: error.rs  mod.rs
src/heartbeat/: errors.rs  heartbeat.rs  mod.rs  models.rs
src/retry_police/: mod.rs
src/services/: internal_communication.rs  mod.rs
src/services/dht_map/: dht_map.rs  error.rs  mod.rs  model.rs
src/services/distributed_map/: error.rs  mod.rs
src/services/file_storage/: errors.rs  file_storage.rs  local_storage.rs  mod.rs  model.rs
src/services/file_storage/local_storage/: local_storage.rs  mod.rs  (+1 more)
src/services/virtual_fs/: mod.rs  models.rs  virtual_fs.rs
tfs/: .gitignore  Cargo.toml  link.magnet
tfs/fs/: chunk-UBC4EIKQ.js  chunk-W4MRFCNC.js  index.html  main-UTE7IHPQ.js  styles-6ORURVDK.css
tfs/src/: main.rs
tfs/src/common/: authenticated_user.rs  common.rs  default_error.rs  exceptions.rs  file_range.rs  mod.rs  models.rs  state_update.rs
tfs/src/config/: global_config.rs
tfs/src/controllers/: mod.rs  model.rs
tfs/src/heartbeat/: errors.rs  heartbeat.rs  models.rs
tfs/src/services/: internal_communication.rs  mod.rs
(+78 files in other folders)
